--- a/opmaak.css
+++ b/opmaak.css
@@ -34,11 +34,11 @@ ul {
   }
 
   body {
-      background-color: lightgreen;
+      background-color: khaki;
 
   }
 
   #body1 {
 
-    background-color: coral;
+    background-color: paleturquoise;
   }
