--- a/opmaak.css
+++ b/opmaak.css
@@ -30,7 +30,7 @@ ul {
   
   li a:hover:not(.active) {
     background-color: #555;
-    color: white;
+    color: white; /* backgroundcolour van ons menu
   }
 
   body {
