--- a/opmaak.css
+++ b/opmaak.css
@@ -4,7 +4,7 @@ ul {
     padding: 0;
     width: 200px;
     background-color: #e74444;
-    border: 1px solid #555;
+    border: 1px solid rgb(225, 144, 13);
   }
   
   li a {
