--- a/opmaak.css
+++ b/opmaak.css
@@ -14,6 +14,7 @@ ul {
     text-decoration: none;
   }
   
+  /* Tekst in het midden van een blokje bij de inhoudsopgave*/
   li {
     text-align: center;
     border-bottom: 1px solid #555;
