--- a/opmaak.css
+++ b/opmaak.css
@@ -3,8 +3,8 @@ ul {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #e74444;
-    border: 1px solid rgb(225, 144, 13);
+    background-color: #26edf1;
+    border: 1px solid rgb(254, 254, 254);
   }
   
   li a {
@@ -20,9 +20,6 @@ ul {
     border-bottom: 1px solid #555;
   }
   
-  li:last-child {
-    border-bottom: none;
-  }
   
   li a.active {
     background-color: #04AA6D;
