--- a/opmaak.css
+++ b/opmaak.css
@@ -3,8 +3,8 @@ ul {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #26edf1;
-    border: 1px solid rgb(254, 254, 254);
+    background-color: #e68938; 
+    border: 1px solid #e68938
   }
   
   li a {
