--- a/opmaak.css
+++ b/opmaak.css
@@ -3,8 +3,8 @@ ul {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #e68938; 
-    border: 1px solid #e68938
+    background-color: #e68938; /* Kleur van de blokjes van de inhoudopgave*/
+    border: 5px solid #62a056; /* Kleur van de border van de inhoudsopgave*/
   }
   
   li a {
