--- a/opmaak.css
+++ b/opmaak.css
@@ -33,3 +33,53 @@ ul {
 
     background-color: paleturquoise; /* backgroundcolour van #body1 (onze homepage)*/
   }
+
+  /* Stijl voor het dropdownmenu */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Stijl voor de knop die het menu activeert */
+.dropbtn {
+  background-color: #e68938;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Stijl voor de items in het dropdownmenu */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Stijl voor de items in het dropdownmenu wanneer ze worden aangeklikt */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Stijl voor de items in het dropdownmenu wanneer je eroverheen gaat */
+.dropdown-content a:hover {
+  background-color: #555;
+  color: white;
+}
+
+/* Zorg ervoor dat het dropdownmenu zichtbaar wordt wanneer je erop klikt */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+
+
+
+
